Nettoyage de code inutilisé